--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,35 +1,50 @@
-@import './base.css';
+@import "./base.css";
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+   max-width: 1280px;
+   margin: 0 auto;
+   padding: 2rem;
+   font-weight: normal;
 }
 
 a,
 .green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+   text-decoration: none;
+   color: hsla(160, 100%, 37%, 1);
+   transition: 0.4s;
+   padding: 3px;
+}
+
+button {
+   padding: 5px;
+   border: 1px solid hsla(160, 100%, 37%, 1);
+   border-radius: 5px;
+   background-color: hsla(160, 100%, 37%, 1);
+   color: white;
+   cursor: pointer;
+}
+
+button:hover {
+   background-color: hsla(160, 100%, 37%, 0.8);
 }
 
 @media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+   a:hover {
+      background-color: hsla(160, 100%, 37%, 0.2);
+   }
 }
 
 @media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+   body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+   #app {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      padding: 0 2rem;
+   }
 }
