--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,10 +1,12 @@
 @import "./base.css";
 
 #app {
-   max-width: 1280px;
+   max-width: 480px;
    margin: 0 auto;
    padding: 2rem;
    font-weight: normal;
+   display: flex;
+   flex-direction: column;
 }
 
 a,
@@ -16,7 +18,7 @@ a,
 }
 
 button {
-   padding: 5px;
+   padding: 0.5rem;
    border: 1px solid hsla(160, 100%, 37%, 1);
    border-radius: 5px;
    background-color: hsla(160, 100%, 37%, 1);
